--- a/iframe.css
+++ b/iframe.css
@@ -5,6 +5,9 @@ body {
 	padding:0;
 	margin:0;
 }
+* {
+    box-sizing: border-box;
+}
 .block1, .block2, .block3, .block4 {
 	position:absolute;
 	height:100px;
@@ -46,10 +49,10 @@ body {
 .hover {
 	outline:dashed 1px rgba(0,0,0,.5);
 }
-.controls, .box, .padding {
+.controls, .box, .pad {
 	position:absolute;
 }
-.controls.hover, .box.hover, .padding.hover {
+.controls.hover, .box.hover, .pad.hover {
 	outline:none;
 	/*border:solid 1px rgba(0,0,0,0.6);*/
 }
@@ -85,7 +88,7 @@ body {
 .box {
 	border:solid 1px rgba(0,0,0,.4);
 }
-.padding {
+.pad {
 	border:dotted 1px rgba(0,0,0,.3);
 }
 body.hover, html.hover {
@@ -94,40 +97,85 @@ body.hover, html.hover {
 .handle {
 	display:block;
 	position:absolute;
-	height:10px;
-	width:10px;
+	height:20px;
+	width:20px;
 	/*top:0;
 	left:0;*/
-	background-color:rgba(0,0,0,0);
-	-webkit-border-radius:7px;
-	-moz-border-radius:7px;
-	border-radius:7px;
+	background-color:rgba(0,0,0,.3);
+	border: solid 2px rgba(0,0,0,.3);
+	color: #fff;
+	font-size: 12px;
+	font-weight: bold;
+	font-family: Helvetica, Arial, sans-serif;
+	-webkit-border-radius:14px;
+	-moz-border-radius:14px;
+	border-radius:14px;
+	text-align: center;
+	line-height: 20px;
 	-webkit-transition:background .2s linear;
 }
-.handle.move {
-	top:7px;
-	left:7px;
-	right:7px;
-	bottom:7px;
-	width:auto;
-	height:auto;
-}
 .handle:hover, .handle.drag {
-	background-color:rgba(0,0,0,.3);
+	background-color:rgba(0,0,0,.5);
 	outline:none;
 }
-.handle.right:hover, .right.drag {
+.handle.drag {
+    border-color: #fff;
+}
+.handle.right:hover, .handle.right.drag {
 	cursor:e-resize;
 }
-.handle.bottom:hover, .bottom.drag {
+.handle.bottom:hover, .handle.bottom.drag {
 	cursor:s-resize;
 }
-.handle.top:hover, .top.drag {
+.handle.top:hover, .handle.top.drag {
 	cursor:n-resize;
 }
-.handle.left:hover, .left.drag {
+.handle.left:hover, .handle.left.drag {
 	cursor:w-resize;
 }
-.handle.move:hover {
+.handle.top.left:hover, .handle.top.left.drag {
 	cursor:move;
 }
+.handle.right.bottom:hover, .handle.right.bottom.drag {
+	cursor:se-resize;
+}
+
+/* handle specific styles */
+.top {
+    top: -10px;
+    left: 50%;
+    margin-left: -10px;
+}
+.left {
+    left: -10px;
+    top: 50%;
+    margin-top: -10px;
+}
+.bottom {
+    bottom: -10px;
+    left: 50%;
+    margin-left: -10px;
+}
+.right {
+    right: -10px;
+    top: 50%;
+    margin-top: -10px;
+}
+.top.left {
+    top: -8px;
+    left: -8px;
+    margin: 0;
+}
+.right.bottom {
+    bottom: -8px;
+    right: -8px;
+    top: auto;
+    left: auto;
+}
+.double {
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    font-size: 9px;
+}
+
