--- a/default.css
+++ b/default.css
@@ -19,83 +19,86 @@ ul li {
 	height:35px;
 	width:150px;
 	text-indent:-1000em;
-	margin:10px;
+	position: absolute;
+	top: -1px;
+	margin: 0;
 }
-.slogan {
-	position:absolute;
-	top:5px;
-	left:170px;
-	color:#fff;
-}
-.hd, .ft, .bd {
-	position:absolute;
-	left:0;
-	right:0;
-}
-.hd {
-	height:50px;
-	top:0;
-	background-color:#ccc;
-}
-.ft {
-	height:30px;
-	bottom:0;
-	text-align: center;
-}
-.ft a {
-	font-size:12px;
-}
-.bd {
-	height:auto;
-	top:50px;
-	bottom:20px;
+.doc {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 .holder {
 	position:absolute;
-	top:20px;
-	left:100px;
-	right:270px;
-	bottom:20px;
-	padding:12px;
-	padding-top:36px;
-	background-color:#333;
-	-webkit-border-radius:6px;
-	-moz-border-radius:6px;
-	border-radius:6px;
-	-webkit-box-shadow: inset 0 0 8px #222;
-	-moz-box-shadow: inset 0 0 8px #222;
-	box-shadow: inner 0 0 8px #222;
+	top: 35px;
+	left:0;
+	right: 240px;
+	bottom:0;
 }
 iframe.document {
 	width:100%;
 	height:100%;
 	border:none;
 }
-input.search, select.resize {
-	position:absolute;
-	top:6px;
-}
 input.search {
-	left:12px;
-	width:30%;
-}
-select.resize {
-	right:12px;
+	position:absolute;
+	top: 5px;
+	left: 155px;
+	right: 10px;
+	font-size: 18px;
 }
 .rightnav {
 	position:absolute;
-	top:20px;
+	top: 35px;
 	bottom:0;
 	right:0;
 	overflow:auto;
 	z-index:1000;
 	background-color:#333;
 	width:250px;
-	font-size:12px;
+	font-size: 12px;
+}
+.rightnav .ct {
+	padding: 0 10px;
+}
+.selectors {
+	background-color: #444;
+	padding-top: 1px;
+	margin-top: 10px;
+	border-radius: 6px;
+}
+.selectors li {
+	padding: 5px;
+	margin: 0 5px;
+	border-bottom: 1px solid #333;
+	position: relative;
+}
+.selectors li.active {
+	background-color: #666;
+	border-radius: 3px;
+}
+.btn {
+	border-radius: 4px;
+	background-color: #666;
+	padding: 3px 8px 6px;
+	line-height: 18px;
+}
+.addStyle {
+	float: right;
+}
+.newStyle {
+	display: none;
 }
 .sheet {
-	float:right;
-	margin-right:5px;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	display: none;
+}
+li:hover .sheet {
+	display: inline;
 }
 .selector {
 	font-weight:bold;
