great progress on properties panel, got element selection and rule selection mostly working.

--- a/default.css
+++ b/default.css
@@ -75,7 +75,7 @@ input.search {
 	border-bottom: 1px solid #333;
 	position: relative;
 }
-.selectors li.active {
+.active {
 	background-color: #666;
 	border-radius: 3px;
 }
