--- a/default.css
+++ b/default.css
@@ -151,24 +151,7 @@ li:hover .sheet {
 }
 .controls.hover, .box.hover, .pad.hover {
 	outline:none;
-	/*border:solid 1px rgba(0,0,0,0.6);*/
 }
-.box .label {
-	position:absolute;
-	top:-16px;
-	left:-1px;
-	height:16px;
-	color:rgba(0,0,0,0.4);
-	line-height: 16px;
-	font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
-	font-size:11px;
-}
-.label.hover, .label * {
-	outline:none;
-}
-/*.box.hover {
-	border-color:rgba(0,0,0,0.8);
-}*/
 .label .meta {
 	display:none;
 }
@@ -208,6 +191,7 @@ li:hover .sheet {
 .layoutMode .layout.handle { display:block; }
 .decorateMode .decorate.handle { display:block; }
 .textMode .text.handle { display:block; }
+
 
 .handle:hover, .handle.drag {
 	background-color:rgba(0,0,0,.5);
@@ -297,4 +281,104 @@ li:hover .sheet {
 .handle.subhandle.margin.top { top: -10px; }
 .handle.subhandle.margin.bottom { bottom: -10px; }
 
+.handle.defined {
+	background-color:rgba(0,255,0,.2);
+}
+.handle.defined.subhandle:hover, .handle.defined.subhandle.drag {
+	background-color:rgba(0,255,0,.5);
+}
+.handle {
+	overflow:hidden;
+}
+.handle:hover, .handle.drag {
+	overflow:visible;
+}
+.handle .labelWrap {
+	position:absolute;
+	top:10px;
+	left:50%;
+	margin-left:-50px;
+	padding-top:12px;
+	z-index:1000;
+}
+.handle.left .labelWrap, .handle.right .labelWrap {
+	top:50%;
+	margin-top:-25px;
+	left:10px;
+	margin-left:0;
+	padding-left:12px;
+	padding-top:0;
+}
+.handle .label {
+	display:block;
+	background-color:#ccc;
+	color:#000;
+	border-radius:4px;
+	padding: 4px 6px 6px;
+	opacity:0;
+	text-align:center;
+	-webkit-transition: opacity .2s linear;
+	line-height: 16px;
+	font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
+	box-shadow: 1px 1px 4px rgba(0,0,0,.7);
+	padding-right:30px;
+}
+.handle:hover .label, .handle.drag .label {
+	opacity:1;
+}
+.handle .property {
+	font-size:10px;
+	font-weight:normal;
+	white-space:nowrap;
+}
+.handle .value {
+	display:block;
+	font-weight:bold;
+	font-size:18px;
+}
+.handle .label::after {
+	content:'.';
+	width:0;
+	height:0;
+	overflow:hidden;
+	border:solid 7px transparent;
+	border-bottom-color:#ccc;
+	border-top-width:0;
+	position:absolute;
+	top:5px;
+	left:50%;
+	margin-left:-5px;
+}
+.handle.left .label::after, .handle.right .label::after {
+	border-bottom-color:transparent;
+	border-right-color:#ccc;
+	border-top-width:7px;
+	border-left-width:0;
+	top:50%;
+	left:5px;
+	margin-left:0;
+	margin-top:-5px;
+}
+.rem {
+	position:absolute;
+	background-color:#aaa;
+	color:#fff;
+	width:20px;
+	height:20px;
+	border-radius:20px;
+	top:50%;
+	right:5px;
+	margin-top:-10px;
+	line-height:20px;
+	text-align:center;
+	display:none;
+	font-size:14px;
+	font-weight:normal;
+}
+.rem:hover {
+	background-color:#888;
+}
+.handle.defined .rem {
+	display:block;
+}
 
