--- a/default.css
+++ b/default.css
@@ -190,7 +190,7 @@ li:hover .sheet {
 }
 .layoutMode .layout.handle { display:block; }
 .decorateMode .decorate.handle { display:block; }
-.textMode .text.handle { display:block; }
+.typeMode .type.handle { display:block; }
 
 
 .handle:hover, .handle.drag {
@@ -268,12 +268,14 @@ li:hover .sheet {
     top: 15px;
     bottom: 15px;
     height: auto;
+    min-height: 10px;
     width: 10px;
 }
 .handle.subhandle.top, .handle.subhandle.bottom {
     left: 15px;
     right: 15px;
     width: auto;
+    min-width: 10px;
     height: 10px;
 }
 .handle.subhandle.margin.left { left: -10px; }
