--- a/iframe.css
+++ b/iframe.css
@@ -8,14 +8,12 @@
 body.hover, html.hover {
 	outline:none;
 }
-#mouseTest {
+#snapTest {
 	position:absolute;
 	top:0;
 	left:0;
-	margin-left:-8px;
-	margin-top:-8px;
-	width:6px;
-	height:6px;
+	width:12px;
+	height:12px;
 	background-color:red;
 	z-index:1000;
 }
