make selected rule highlight all affected elements

--- a/iframe.css
+++ b/iframe.css
@@ -1,8 +1,10 @@
 /**** CODESIGN STYLES ****/
 * {
     box-sizing: border-box;
+    image-rendering: optimizeSpeed;
+    image-rendering: -webkit-optimize-contrast;
 }
-.hover {
+.hover, .selected {
 	outline:dashed 1px rgba(0,0,0,.5);
 }
 body.hover, html.hover {
@@ -36,33 +38,62 @@ body {
 	border: solid 0 blue;
 }
 .block1 {
-	top:30px;
-	left:500px;
+	top:50px;
+	left:900px;
 	background-color:#ccc;
 	margin:10px 8px 15px 30px;
 	padding:10px 8px 15px 30px;
 }
 .block2 {
-	top:50px;
-	left:300px;
+	top:200px;
+	left:825px;
 	background-color:#eee;
 	padding: 10px;
 	margin:20px 30px;
 }
 .block3 {
-	top:350px;
-	left:500px;
+	top:145px;
+	left:520px;
 	background-color:#666;
 	padding:1px;
 	margin:1px;
 }
 .block4 {
-	top:350px;
-	left:150px;
+	top:325px;
+	left:75px;
 	background-color:#999;
 }
+.nav {
+	overflow:hidden;
+	background-color:#666;
+}
+.nav li {
+	list-style:none;
+}
+.horiz li {
+	float:left;
+}
+.nav a {
+	float:left;
+	padding: 6px 12px;
+	color:#fff;
+	text-decoration:none;
+	font-family: Helvetica, Arial, sans-serif;
+}
+.header, .content {
+	margin: 100px auto;
+	width:70%;
+}
 .content {
-	margin: 3em 12em;
 	padding:20px;
-	width:50%;
+}
+.right {
+	float:right;
+}
+.sidenote {
+	float:left;
+	width:250px;
+}
+.sidenote img {
+	max-width:250px;
 }
