--- a/default.css
+++ b/default.css
@@ -71,6 +71,8 @@ input.search {
 	background-color:#333;
 	width:250px;
 	font-size: 12px;
+	-webkit-user-select: none;
+	user-select: none;
 }
 .rightnav .ct {
 	padding: 0 10px;
@@ -192,6 +194,32 @@ li:hover .sheet {
 .decorateMode .decorate.handle { display:block; }
 .typeMode .type.handle { display:block; }
 
+.props li {
+	padding-bottom:10px;
+}
+.inlineBtns {
+	overflow:hidden;
+}
+.inlineBtns li {
+	float:left;
+	padding: 4px 8px;
+	background-color:#666;
+	margin-right:1px;
+	color:#000;
+}
+.inlineBtns li.active {
+	background-color:#ccc;
+}
+.inlineBtns .remove { display:none; }
+.inlineBtns li.active:hover .remove {
+	display:inline-block;
+	background-color:#888;
+	border-radius:10px;
+	padding: 1px 4px;
+	line-height:10px;
+	margin-left:2px;
+	font-size:10px;
+}
 
 .handle:hover, .handle.drag {
 	background-color:rgba(0,0,0,.5);
