--- a/default.css
+++ b/default.css
@@ -73,6 +73,7 @@ input.search {
 	font-size: 12px;
 	-webkit-user-select: none;
 	user-select: none;
+	cursor: default;
 }
 .rightnav .ct {
 	padding: 0 10px;
@@ -104,6 +105,7 @@ input.search {
 	margin: 0 5px;
 	border-bottom: 1px solid #333;
 	position: relative;
+	cursor: pointer;
 }
 .active {
 	background-color: #666;
@@ -206,6 +208,7 @@ li:hover .sheet {
 	background-color:#666;
 	margin-right:1px;
 	color:#000;
+	cursor: pointer;
 }
 .inlineBtns li.active {
 	background-color:#ccc;
