--- a/iframe.css
+++ b/iframe.css
@@ -42,7 +42,7 @@ body {
 .doc {
 	background: url(http://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Slug_pic.jpg/220px-Slug_pic.jpg) no-repeat,
 				url(http://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Slug_in_VanDusen_Botanical_Garden.jpg/220px-Slug_in_VanDusen_Botanical_Garden.jpg) no-repeat 100% 100%,
-				-webkit-linear-gradient(top, #ccc, white);
+				-webkit-linear-gradient(top, white, rgba(200,200,200,.5), #CCC);
 	background-size: 100px 50px, 25%, 100%;
 }
 .block {
