--- a/default.css
+++ b/default.css
@@ -42,7 +42,7 @@ body.sleep .controls { opacity:0; }
 	position:absolute;
 	top: 35px;
 	left:0;
-	right: 250px;
+	right: 300px;
 	bottom:0;
 	overflow:hidden;
 }
@@ -101,7 +101,7 @@ input.search {
 	overflow:auto;
 	z-index:1000;
 	background-color:#333;
-	width:250px;
+	width:300px;
 	font-size: 12px;
 	-webkit-user-select: none;
 	user-select: none;
@@ -186,7 +186,27 @@ li:hover .sheet {
 	background-size:cover, auto;
 	background-repeat:no-repeat, repeat;
 	width:70px;
-	height:50px;
+	height:80px;
+	float:left;
+	margin-top:3px;
+	margin-left:-80px;
+	border-radius:5px;
+}
+.bgs li {
+	padding-left:80px;
+	position:relative;
+}
+.bgs h3 {
+	margin-left:-80px;
+	margin-bottom:5px;
+	width:255px;
+	overflow:hidden;
+	text-overflow:ellipsis;
+	white-space:nowrap;
+}
+.bgs .rem {
+	top:8px;
+	display:block;
 }
 
 .controls, .box, .pad {
