--- a/iframe.css
+++ b/iframe.css
@@ -64,8 +64,9 @@ body {
 	background-position:100% 100%, 0 0;
 	background-size: 70px 50px, 25%, 100%;
 	
-	box-shadow: 2px 2px 5px 5px yellow,
-				0 0 5px red inset;
+	box-shadow: 2px 2px 3px 5px rgb(255, 255, 0),
+				0 0 5px red inset,
+				3px 3px 10px 12px #ccc;
 }
 .block2 {
 	top:200px;
