basic font title search is working

--- a/default.css
+++ b/default.css
@@ -264,6 +264,9 @@ li:hover .sheet {
 .bgControls {
 	padding-top:4px;
 }
+.fontSearch {
+	width:260px;
+}
 
 .controls, .box, .pad {
 	position:absolute;
