--- a/default.css
+++ b/default.css
@@ -615,3 +615,18 @@ li:hover .sheet {
 .handle.showLabel .label, .handle:hover .label, .handle.drag .label {
 	opacity:1;
 }
+
+
+.ui-slider .ui-slider-range { display:none; }
+.alphaSlider { background:red none; }
+.hueSlider {
+    background-image: -webkit-linear-gradient(top, 
+        rgb(255, 0, 0),
+        rgb(255, 0, 255),
+        rgb(0, 0, 255),
+        rgb(0, 255, 255),
+        rgb(0, 255, 0),
+        rgb(255, 255, 0),
+        rgb(255, 0, 0)
+    );
+}
